# hldiscord

./: .gitignore  CMakeLists.txt  README.md  checkstyle.json  discord.hdll  gen.hl.hxml  haxelib.json  make-hdll.bat  test.hxml
.github/workflows/: build.yml
extension/: CMakeLists.txt  extension.cpp
extension/libs/discord-presence/: .gitignore  CMakeLists.txt  LICENSE.md
extension/libs/discord-presence/src/: discord-rpc.cpp  rpc-connection.hpp
extension/libs/discord-presence/src/platform/: unix.hpp  windows.cpp  windows.hpp
generator/: Generator.hx
lib/: discord.idl
lib/discord/: Api.hx
src/: extension.cpp  extension.h
src/discord/: Api.hx  Presence.hx
test/: Test.hx  test.hl
